# betteria

./: .gitignore  README.md  pyproject.toml
.claude/commands/: proofread.md
betteria/: cli.py
tests/: test_cli.py  test_greet.py
