[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betteria"
version = "0.2.0"
description = "A commandline tool to enhance PDFs from Internet Archive."
authors = []
requires-python = ">=3.12.0"
dependencies = [
    "ebooklib>=0.18",
    "img2pdf>=0.6.0",
    "mistune>=3.0",
    "mlx-vlm>=0.3.11",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "rich>=13.9.4",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "twine", 
    "maturin",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[project.scripts]
betteria = "betteria.cli:main"
